# privacy-sample-maker

./: README.md  pyproject.toml
examples/: schema.csv
src/privacy_sample_maker/: __init__.py  __main__.py  cli.py  core.py
tests/: test_privacy_sample_maker.py
